# doxcer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  set-up-doxcer.ps1
config/: ai_model.env  azure_key_vault.env  definitions.env  system.env
docs/newly-documented/: example.md
examples/: example.py
examples/aws/notebooks/: fct_example.ipynb
examples/aws/pipelines/: pipelines.json
examples/databricks/notebooks/: example.ipynb
examples/databricks/pipelines/: pipeline.json
examples/fabric/notebooks/fct_example.Notebook/: notebook-content.py
examples/fabric/pipelines/fct_example_orchestration.DataPipeline/: pipeline-content.json
examples/scripts/: example.ps1  example.py  example.rs  example.sql
examples/synapse/notebooks/: fct_example.json
examples/synapse/pipelines/: pipeline.json
sql/: create_azure_definitions.sql  create_fabric_definitiions.sql  fetch_azure_definitions.sql  fetch_fabric_definitions.sql
src/: fetch_definitions.rs  fetch_secrets.rs  main.rs  unit_tests.rs
templates/: aws_prompt.md  context.md  databricks_prompt.md  datafactory_prompt.md  default_prompt.md  fabric_prompt.md  pipeline_prompt.md  powerbi_prompt.md  synapse_prompt.md
tools/: enable-dev-tools.ps1  mass-doxcer.py
