[package]
name = "doxcer"
version = "0.1.4"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde   = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Azure SDK for Rust
azure_identity = "0.30.0"
azure_security_keyvault_secrets = "0.9.0"

# Minimal runtime so we can await once inside a blocking app
tokio = { version = "1", features = ["rt", "macros"] }
chrono = "0.4.42"
chrono-tz = "0.10.4"

# Fabric Database
anyhow = "1.0"
odbc-api = "20.1.1"

# Handle .env parameters
dotenvy = "0.15.7"
once_cell = "1.21.3"
